# Otus_courses

./: .gitignore  CMakeLists.txt  README.md  boost_test.cpp  main.cpp
.github/workflows/: github-actions-demo.yml
server/: CMakeLists.txt  conanfile.txt
task_1/: CMakeLists.txt  google_test.cpp  lib.cpp  main.cpp
task_2/: CMakeLists.txt  main.cpp
task_2/tests/: auto_type_task_1.cpp  tuple_type_task.cpp
task_3/: CMakeLists.txt  main.cpp
task_3/tests/: auto_type_task_2.cpp
task_4/: CMakeLists.txt  foo.hpp  main.cpp
task_4/timus/: timus.cpp
task_5/: CMakeLists.txt  main.cpp
task_5/MVC/headers/: Controller.hpp  Model.hpp  Viewer.hpp
task_5/MVC/src/: Controller.cpp  Model.cpp  Viewer.cpp
task_5/figures/headers/: Circle.hpp  IFigure.hpp  IPolygon.hpp  Point.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
task_5/figures/src/: Circle.cpp  IFigure.cpp  IPolygon.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
task_5/headers/: Form.hpp  IFigure.hpp
task_5/src/: IFigure.cpp
task_7/: CMakeLists.txt  main.cpp
task_7/headers/: CommandProcessor.hpp
task_7/src/: CommandProcessor.cpp
